# coldemailing

./: .env.example  .gitignore  README.md  SETUP_NOTES.md  apollo_contacts.py  apolloapi.py  check_account_status.py  config.py  docker-compose.yml  emailsearch.py  prompt.py  requirements.txt  server.py  start_app.bat  test_people_search.py  verify_config_temp.py
Backend/: .gitignore  dockerfile  pyproject.toml
Backend/.github/: copilot-instructions.md
Backend/app/: main.py
Backend/app/api/: apollo.py
Backend/app/apollo/: apollo_client.py
Backend/app/db/: connection.py  schema.py
Backend/app/models/: apollo_model.py  company.py
Backend/app/services/: apollo_service.py
Backend/tests/: test_apollo_client_integration.py  test_apollo_service_integration.py  test_singleton.py
apollo/: __init__.py  api_client.py  company_resolver.py  contact_search.py  display.py  enrichment.py  export.py  llm.py  mailer.py
database/: __init__.py  database.py  db_operations.py  migrate_json_to_db.py  models.py  schema.sql  supabase_schema.sql
scripts/: check_db.bat  list_companies.py  start_app.bat  stop_app.bat
tests/: debug_gemini.py  show_search_titles.py  test_api_key.py  verify_config_temp.py
web/: README.md  index.html
web/src/: App.jsx  index.css
web/src/components/: ContactGrid.jsx  EmailComposer.jsx  SearchForm.jsx
